fix z-index in layout for desk

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -126,6 +126,7 @@
     box-shadow: none;
     background-color: transparent;
     transform: translateX(0);
+    z-index: 0;
   }
 }
 .closeButton {
